# tomatoes-repl

./: LICENSE  README.md  stack.yaml  test-data.hs  tomatoes-cli.cabal  tomatoes-repl.cabal
app/: Main.hs
src/: Lib.hs  Tomatoes.hs
src/Tomatoes/: Client.hs  Parser.hs  Types.hs
