name:                tomatoes-cli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/potomak/tomatoes-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Giovanni Cappellotto
maintainer:          potomak84@gmail.com
copyright:           2016 Giovanni Cappellotto
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Tomatoes,
    Tomatoes.Client,
    Tomatoes.Parser,
    Tomatoes.Types
  ghc-options:         -Wall
  build-depends:
    aeson,
    ansi-terminal >= 0.7.1.1,
    attoparsec,
    base >= 4.7 && < 5,
    bytestring,
    haskeline,
    http-client,
    http-types,
    mtl,
    process,
    stm,
    time
  default-language:    Haskell2010

executable tomatoes-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tomatoes-cli
  default-language:    Haskell2010

test-suite tomatoes-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tomatoes-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/potomak/tomatoes-cli
